--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,17 @@ dependencies:
   flutter:
     sdk: flutter
 
+  sqflite: ^2.3.3+1
+  path: ^1.9.0
   flutter_bloc: ^8.1.5
   flutter_animate: ^4.5.0
   animated_text_kit: ^4.2.2
+  shared_preferences: ^2.2.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
