--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.0
   equatable: ^2.0.7
+  flutter_slidable: ^4.0.0
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
