--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   equatable: ^2.0.7
   flutter_slidable: ^4.0.0
   collection: ^1.19.1
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
