--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  excel: ^4.0.2
+  path_provider: ^2.1.3
+  permission_handler: ^11.3.1
+  share_plus: ^9.0.0
   sqflite: ^2.3.3+1
   path: ^1.9.0
   flutter_bloc: ^8.1.5
