--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_slidable: ^4.0.0
   collection: ^1.19.1
   local_auth: ^2.3.0
+  file_picker: ^8.0.7
+  change_app_package_name: ^1.5.0
 
 dev_dependencies:
   flutter_test:
