--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations: # Add this
+    sdk: flutter        # Add this
+  intl: ^0.20.2 # Make sure this is present and up-to-date
   excel: ^4.0.2
   path_provider: ^2.1.3
   permission_handler: ^11.3.1
@@ -55,6 +57,7 @@ dependencies:
   change_app_package_name: ^1.5.0
   encrypt: ^5.0.3
   crypto: ^3.0.3
+  flutter_secure_storage: ^9.2.2
 
 
 dev_dependencies:
@@ -78,7 +81,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  generate: true # Add this line
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svg/
