--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,8 +55,9 @@ dependencies:
   change_app_package_name: ^1.5.0
   encrypt: ^5.0.3
   crypto: ^3.0.3
-
-
+  flutter_localizations: # Add this
+    sdk: flutter        # Add this
+  intl:
 dev_dependencies:
   flutter_test:
     sdk: flutter
