--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   change_app_package_name: ^1.5.0
   encrypt: ^5.0.3
   crypto: ^3.0.3
+  introduction_screen: ^3.1.14
 
 dev_dependencies:
   flutter_test:
@@ -83,7 +84,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svg/
-
+    - assets/svg/on_boarding/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
