--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations: # Add this
+    sdk: flutter        # Add this
+  intl: ^0.20.2 # Make sure this is present and up-to-date
   excel: ^4.0.2
   path_provider: ^2.1.3
   permission_handler: ^11.3.1
@@ -55,9 +57,8 @@ dependencies:
   change_app_package_name: ^1.5.0
   encrypt: ^5.0.3
   crypto: ^3.0.3
-  flutter_localizations: # Add this
-    sdk: flutter        # Add this
-  intl:
+  introduction_screen: ^3.1.14
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -79,12 +80,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  generate: true
-
+  generate: true # Add this line
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svg/
-
+    - assets/svg/on_boarding/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
