--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   encrypt: ^5.0.3
   crypto: ^3.0.3
   introduction_screen: ^3.1.14
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
