--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   crypto: ^3.0.3
   introduction_screen: ^3.1.14
   url_launcher: ^6.3.0
+  flutter_secure_storage: ^9.2.2
 
 
 dev_dependencies:
