--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   introduction_screen: ^3.1.14
   url_launcher: ^6.3.0
   flutter_secure_storage: ^9.2.2
+  pinput:
 
 dev_dependencies:
   flutter_test:
